# rust-task-manager

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  lib.rs  main.rs
src/display/: mod.rs
src/parser/: mod.rs  parser.rs
src/store/: mod.rs
src/tasks/: basicstore.rs  jsonstore.rs  manager.rs  mod.rs  task.rs  taskstore.rs
tests/: manager_tests.rs  query_tests.rs  serialisation_tests.rs  task_tests.rs
